Create forms html file

--- a/styles.css
+++ b/styles.css
@@ -378,7 +378,7 @@ a {
 
 /*----------------------------------------------------------- Navbar styles -------------------------------------------------------------------------------*/
 
-nav {
+.nav {
   height: 75px;
   width: 100%;
   display: flex;
@@ -617,7 +617,7 @@ footer {
 /*----------------------------------------------- Desktop Nav -------------------------------------------------------------------------*/
 
 
-  nav {
+  .nav {
     height: 100px;
   }
 
