Update h2 and h3 size

--- a/styles.css
+++ b/styles.css
@@ -244,9 +244,14 @@ a {
 
 /* Specific heading styles */
 .u-heading-1,
-.u-heading-2 {
+ {
   font-size: 1.5rem;
   line-height: 1.8rem;
+}
+
+.u-heading-2 {
+  font-size: 1.2rem;
+  line-height: 1.5rem;
 }
 
 .u-hero-headline {
