--- a/design-system.css
+++ b/design-system.css
@@ -1,4 +1,3 @@
-
 /* Styles for toggle box image */
 .toggleBox a img {
     filter: invert(0);
@@ -26,7 +25,7 @@ img.close.show {
 
 .design-system-content {
     display: grid;
-    
+
     padding-bottom: 5%;
 
 
@@ -42,7 +41,7 @@ img.close.show {
     justify-content: space-evenly;
 }
 
-.typography-container-item > * {
+.typography-container-item>* {
     padding: 5px;
 }
 
@@ -50,7 +49,9 @@ img.close.show {
     color: var(--clr-accen-dark);
 }
 
-/*For spacing page example divs*/
+.sidebar-desktop {
+    display: none;
+}
 
 
 
@@ -59,11 +60,13 @@ img.close.show {
 
 @media (min-width: 800px) {
 
-    
 
+    .sidebar-mobile {
+        display: none;
+    }
 
     .design-system-content {
-        margin-left: 250px; 
+        margin-left: 250px;
     }
 
     /* Grid layout for large screens */
@@ -75,7 +78,7 @@ img.close.show {
     /* Navbar for desktop */
 
 
-    a:hover  {
+    a:hover {
         color: var(--clr-accen-light);
     }
 
@@ -83,18 +86,28 @@ img.close.show {
     div.toggleBox {
         display: none;
     }
-    .sidebar {
-        position: fixed;  /* Fixes the sidebar to a specific position on the screen */
-        top: 15%;           /* Aligns the top of the sidebar with the top of the viewport */
-        left: 0;          /* Aligns the left of the sidebar with the left of the viewport */
-        width: auto;    /* Specify the width of the sidebar */
-        height: 100vh;    /* Sets the height of the sidebar to fill the viewport */
-        overflow-y: auto; /* Adds a scrollbar if the content is taller than the viewport */
-        z-index: 1000;    /* Ensures the sidebar is on top of other content */
+
+    .sidebar-desktop {
+        display: block;
+        position: fixed;
+        /* Fixes the sidebar to a specific position on the screen */
+        top: 15%;
+        /* Aligns the top of the sidebar with the top of the viewport */
+        left: 0;
+        /* Aligns the left of the sidebar with the left of the viewport */
+        width: auto;
+        /* Specify the width of the sidebar */
+        height: 100vh;
+        /* Sets the height of the sidebar to fill the viewport */
+        overflow-y: auto;
+        /* Adds a scrollbar if the content is taller than the viewport */
+        z-index: 1000;
+        /* Ensures the sidebar is on top of other content */
     }
 }
 
 @media (min-width: 1200px) {
+
     /* Adjust grid layout for even larger screens */
     .l-grid {
         grid-template-columns: repeat(3, 1fr);
