--- a/styles.css
+++ b/styles.css
@@ -243,7 +243,7 @@ a {
 }
 
 /* Specific heading styles */
-.u-heading-1,
+.u-heading-1
  {
   font-size: 1.5rem;
   line-height: 1.8rem;
@@ -419,7 +419,14 @@ a {
   float: right;
   text-align: center;
   transition: all .5s;
+  overflow-y: auto; /* or overflow-y: scroll; */
 }
+
+/* Hide the scrollbar */
+.nav-list::-webkit-scrollbar {
+  display: none;
+}
+
 
 .nav-list li {
   opacity: 0;
