--- a/styles.css
+++ b/styles.css
@@ -305,7 +305,7 @@ a {
 }
 
 .hero-bg {
-  background-image: url('/images/backgrounds/hero-welcome.png');
+  background-image: url('/images/backgrounds/hero-welcome.jpg');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -380,7 +380,7 @@ a {
 }
 
 .white-overlay {
-  background-color: rgba(255, 255, 255, 0.8);
+  background-color: rgba(255, 255, 255, 0.9);
   border-radius: 10px;
   box-shadow: var(--box-shadow);
 }
