--- a/styles.css
+++ b/styles.css
@@ -362,7 +362,7 @@ a {
   transform: translateY(-5px);
 	
 	&:hover, &:focus-within {
-		box-shadow: 0 0 0 2px var(--clr-accent-light), 0 10px 60px 0 rgba(0, 0, 0, .1);
+		box-shadow: 0 0 0 5px var(--clr-bg-dark), 0 10px 60px 0 rgba(0, 0, 0, .1);
 		
 	}
 }
