Update coming soon page

--- a/styles.css
+++ b/styles.css
@@ -590,7 +590,9 @@ footer {
   gap: 3rem;
 }
 
-
+.full-view {
+  min-height: 80vh;
+}
 
 /*----------------------------------------------- Desktop view -------------------------------------------------------------------------*/
 
