--- a/styles.css
+++ b/styles.css
@@ -360,13 +360,17 @@ a {
 }
 
 .card__image-container {
-	border-radius: 10px;
+
 	overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .card_image {
-	max-width: 100%;
+	max-width: 70%;
 	display: block;
+  border-radius: 10px;
 }
 
 .white-overlay {
