--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 
   /*Background*/
   --clr-primary-bg: #fffffe;
-  --clr-secondary-bg: #F5F5DC;
+  --clr-secondary-bg: #FFF7F1;
   --clr-white: #191919;
   --clr-black: #191919;
 
@@ -571,6 +571,13 @@ footer {
   transform: rotate(180deg);
 }
 
+.section-combo {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 
 /*----------------------------------------------- Desktop view -------------------------------------------------------------------------*/
 
@@ -591,7 +598,7 @@ footer {
 
   .section-combo {
     display: grid;
-    margin: 0rem 15rem;
+    padding-left: 10%;
     justify-content: center;
     grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
   }
